[gd_scene load_steps=32 format=3 uid="uid://b25fwrn84xib4"]

[ext_resource type="Script" path="res://Scripts/Settings.gd" id="1_hj3wi"]
[ext_resource type="Texture2D" uid="uid://dsrijfuwektr2" path="res://Sprites/checkbox_yes.png" id="2_gs0b7"]
[ext_resource type="Texture2D" uid="uid://bmwxbklbkgq6f" path="res://Sprites/checkbox_no.png" id="3_5tc4k"]

[sub_resource type="CanvasTexture" id="CanvasTexture_vxw2v"]

[sub_resource type="CanvasTexture" id="CanvasTexture_wpjxm"]

[sub_resource type="CanvasTexture" id="CanvasTexture_r37qo"]

[sub_resource type="CanvasTexture" id="CanvasTexture_7rrcs"]

[sub_resource type="CanvasTexture" id="CanvasTexture_vylyd"]

[sub_resource type="CanvasTexture" id="CanvasTexture_xoaow"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_p7xsy"]
texture = ExtResource("3_5tc4k")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_sher1"]
texture = ExtResource("3_5tc4k")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_wo1b2"]
texture = ExtResource("3_5tc4k")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_0mfo1"]
texture = ExtResource("3_5tc4k")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_w1tf4"]
texture = ExtResource("3_5tc4k")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_mpk2v"]
texture = ExtResource("3_5tc4k")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_casa0"]
bg_color = Color(0.137255, 0.243137, 0.243137, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3dovy"]
bg_color = Color(0.137255, 0.243137, 0.243137, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qk4yg"]
bg_color = Color(0.137255, 0.243137, 0.243137, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dtnyj"]
bg_color = Color(0.137255, 0.243137, 0.243137, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ht6s2"]
bg_color = Color(0.137255, 0.243137, 0.243137, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yvpol"]
bg_color = Color(0.137255, 0.243137, 0.243137, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3ojbj"]
bg_color = Color(0.137255, 0.243137, 0.243137, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_m08an"]
bg_color = Color(0.137255, 0.243137, 0.243137, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_u2he0"]
bg_color = Color(0.137255, 0.243137, 0.243137, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_h4lqy"]
bg_color = Color(0.137255, 0.243137, 0.243137, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tkkjh"]
bg_color = Color(0.137255, 0.243137, 0.243137, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xi18n"]
bg_color = Color(0.137255, 0.243137, 0.243137, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bqeum"]
bg_color = Color(0.305882, 0.505882, 0.505882, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uhtjh"]
bg_color = Color(0.137255, 0.243137, 0.243137, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_eokja"]
bg_color = Color(0.137255, 0.243137, 0.243137, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qj8c1"]
bg_color = Color(0.137255, 0.243137, 0.243137, 1)

[node name="Settings" type="CanvasLayer"]
script = ExtResource("1_hj3wi")

[node name="BasePanel" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0627451, 0.12549, 0.12549, 1)

[node name="TitleLabel" type="Label" parent="BasePanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -231.0
offset_top = 126.0
offset_right = 231.0
offset_bottom = 216.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 63
text = "game of thorns"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SettingsLabel" type="Label" parent="BasePanel" groups=["localizable"]]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -192.0
offset_right = 100.0
offset_bottom = -102.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 63
text = "settings"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LangNameLabel" type="Label" parent="BasePanel" groups=["localizable"]]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 96.0
offset_top = 85.0
offset_right = 477.0
offset_bottom = 175.0
grow_vertical = 2
theme_override_font_sizes/font_size = 42
text = "language:"
vertical_alignment = 1

[node name="LangOptionButton" type="OptionButton" parent="BasePanel"]
visible = false
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -336.0
offset_top = 101.0
offset_right = -96.0
offset_bottom = 167.0
grow_horizontal = 0
grow_vertical = 2
theme_override_font_sizes/font_size = 42

[node name="AdsNameLabel" type="Label" parent="BasePanel" groups=["localizable"]]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 94.0
offset_top = -45.0
offset_right = 475.0
offset_bottom = 45.0
grow_vertical = 2
theme_override_font_sizes/font_size = 42
text = "ads:"
vertical_alignment = 1

[node name="AdsCheckBox" type="CheckBox" parent="BasePanel"]
texture_filter = 1
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -160.0
offset_top = -32.0
offset_right = -96.0
offset_bottom = 32.0
grow_horizontal = 0
grow_vertical = 2
theme_override_icons/checked = ExtResource("2_gs0b7")
theme_override_icons/checked_disabled = ExtResource("2_gs0b7")
theme_override_icons/unchecked = SubResource("CanvasTexture_vxw2v")
theme_override_icons/unchecked_disabled = SubResource("CanvasTexture_wpjxm")
theme_override_icons/radio_checked = SubResource("CanvasTexture_r37qo")
theme_override_icons/radio_checked_disabled = SubResource("CanvasTexture_7rrcs")
theme_override_icons/radio_unchecked = SubResource("CanvasTexture_vylyd")
theme_override_icons/radio_unchecked_disabled = SubResource("CanvasTexture_xoaow")
theme_override_styles/normal = SubResource("StyleBoxTexture_p7xsy")
theme_override_styles/pressed = SubResource("StyleBoxTexture_sher1")
theme_override_styles/disabled = SubResource("StyleBoxTexture_wo1b2")
theme_override_styles/hover = SubResource("StyleBoxTexture_0mfo1")
theme_override_styles/hover_pressed = SubResource("StyleBoxTexture_w1tf4")
theme_override_styles/focus = SubResource("StyleBoxTexture_mpk2v")

[node name="BackButton" type="Button" parent="BasePanel" groups=["localizable"]]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = 340.0
offset_right = 100.0
offset_bottom = 440.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 42
theme_override_styles/normal = SubResource("StyleBoxFlat_casa0")
theme_override_styles/hover = SubResource("StyleBoxFlat_3dovy")
theme_override_styles/pressed = SubResource("StyleBoxFlat_qk4yg")
theme_override_styles/disabled = SubResource("StyleBoxFlat_dtnyj")
theme_override_styles/focus = SubResource("StyleBoxFlat_ht6s2")
text = "back
"

[node name="LangButton" type="Button" parent="BasePanel"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -336.0
offset_top = 96.0
offset_right = -96.0
offset_bottom = 162.0
grow_horizontal = 0
grow_vertical = 2
theme_override_font_sizes/font_size = 42
theme_override_styles/normal = SubResource("StyleBoxFlat_yvpol")
theme_override_styles/hover = SubResource("StyleBoxFlat_3ojbj")
theme_override_styles/pressed = SubResource("StyleBoxFlat_m08an")
theme_override_styles/disabled = SubResource("StyleBoxFlat_u2he0")
theme_override_styles/focus = SubResource("StyleBoxFlat_h4lqy")
text = "sample"

[node name="LangPopupMenu" type="PopupMenu" parent="BasePanel"]
theme_override_font_sizes/font_size = 42
theme_override_styles/panel = SubResource("StyleBoxFlat_tkkjh")
theme_override_styles/panel_disabled = SubResource("StyleBoxFlat_xi18n")
theme_override_styles/hover = SubResource("StyleBoxFlat_bqeum")
theme_override_styles/separator = SubResource("StyleBoxFlat_uhtjh")
theme_override_styles/labeled_separator_left = SubResource("StyleBoxFlat_eokja")
theme_override_styles/labeled_separator_right = SubResource("StyleBoxFlat_qj8c1")

[connection signal="item_selected" from="BasePanel/LangOptionButton" to="." method="_on_lang_option_button_item_selected"]
[connection signal="toggled" from="BasePanel/AdsCheckBox" to="." method="_on_ads_check_box_toggled"]
[connection signal="pressed" from="BasePanel/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="BasePanel/LangButton" to="." method="_on_lang_button_pressed"]
[connection signal="index_pressed" from="BasePanel/LangPopupMenu" to="." method="_on_lang_popup_menu_index_pressed"]
[connection signal="popup_hide" from="BasePanel/LangPopupMenu" to="." method="_on_lang_popup_menu_popup_hide"]
